added model class file (incomplete) and added JSON settings for commands and added test file (incomplete)

--- a/serial_reading_writing/settings.json
+++ b/serial_reading_writing/settings.json
@@ -4,5 +4,9 @@
             "baudrate": 115200,
             "timeout": 1
         }
+    },
+    "commands":{
+        "target": "OK",
+        "command": "settings"
     }
 }
