added writing function to the terminal, and separated it with threads

--- a/serial_reading_writing/settings.json
+++ b/serial_reading_writing/settings.json
@@ -6,7 +6,7 @@
         }
     },
     "commands":{
-        "target": "None",
-        "command": "settings"
+        "target": ">> MAIN APP <<",
+        "command": "None"
     }
 }
